[gd_scene load_steps=4 format=3 uid="uid://cvwvvp72ubuxk"]

[ext_resource type="Script" path="res://skill_select_menu.gd" id="1_s3x6p"]
[ext_resource type="Theme" uid="uid://c0l5ug7556gea" path="res://damage_popup_theme.tres" id="1_u0dln"]
[ext_resource type="Texture2D" uid="uid://cqx7mqdp2v5mv" path="res://sprites/UI/DialogueWindowTemplate01.png" id="2_irj2n"]

[node name="SkillSelectMenu" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -120.0
offset_right = 64.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
script = ExtResource("1_s3x6p")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -52.0
offset_right = 64.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_irj2n")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -40.0
offset_right = 52.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button1" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u0dln")
text = "Fire 1"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u0dln")
text = "Ice 2"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_u0dln")
text = "Hammer"

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
